Successfully created a User Profile in the database
